--- a/_src/pug/helpers/arrays.pug
+++ b/_src/pug/helpers/arrays.pug
@@ -9,3 +9,5 @@
 - const how = ['Вы отправляете фотографии комнат, пожелания, стилевые предпочтения, ритм жизни семьи','Мы создаем концепцию - коллаж с подобранными элементами интерьера, которые будут гармонично вписываться в ваш дом','Подберем несколько вариантов мебели для преображения вашего интерьера','Презентуем подготовленные предложения и ответим на все ваши вопросы лично в офисе или онлайн в Zoom','Высылаем все согласованные материалы и видеозапись презентации, если она проходила в режиме онлайн']
 
 - let record = 1
+
+- const scenario = [['Выбор стиля ','Грамотное смешение стилей и оттенков – главный шаг к правильному построению пространства'],['Составление схемы освещения ','Различные приемы освещения  сбалансируют размер комнаты и сфокусирует внимание на ее достоинствах'],['Поиск текстильных решений ','Шторы, ковры, покрывала, пледы и подушки дарят уют и придают интерьеру завершенный, целостный вид'],['Дополнительные предметы декора и аксессуары','Сочетание функциональности и уюта в каждом предмете декора: картины, плакаты, скульптуры, посуда, флористика и не только'],]
